<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.chat.ChatFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/DefaultToolbar"
        android:background="@color/background_chat_element_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/tv_topic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_nav_element"
        android:gravity="center"
        android:paddingVertical="11dp"
        android:textColor="@color/text_hint"
        android:textSize="@dimen/text_20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="Topic: #testing" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_topic_name"
        app:stackFromEnd="true" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_topic_name"
        tools:visibility="visible" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_topic_name">

        <include layout="@layout/layout_message_shimmer" />

    </com.facebook.shimmer.ShimmerFrameLayout>


    <EditText
        android:id="@+id/et_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_edit_message"
        android:hint="@string/hint_write_message"
        android:imeOptions="flagNoExtractUi"
        android:inputType="text"
        android:maxLines="4"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:textSize="@dimen/text_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_and_attach_btn_container"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/send_and_attach_btn_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_message">

        <ImageView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/send_message"
            android:src="@drawable/ic_btn_send"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/btn_attach_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/attach_content"
            android:src="@drawable/ic_attach_content"
            android:visibility="visible" />
    </FrameLayout>

    <include
        android:id="@+id/layout_network_error"
        layout="@layout/layout_network_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_topic_name" />

</androidx.constraintlayout.widget.ConstraintLayout>